--- a/views/index.twig
+++ b/views/index.twig
@@ -4,7 +4,7 @@
 
    <div class="container entryJSON">
        <div class="row">
-         <div class="col-lg-8 d-flex justify-content-end">
+         <div class="col-lg-8 d-flex justify-content-end textareaEntry">
            <textarea class="textarea" cols="76" rows="20"></textarea>
          </div>
            <div class="col-lg-2"></div>
@@ -13,6 +13,7 @@
 
        <div class="row">
            <div class="col-lg-8 d-flex justify-content-end">
+               <button onclick="convertToXml();">xml</button>
                <input class="deleteCheckBox" type="checkbox">Удалить после открытия
                <button class="btn" onclick="saveJSON();">Сохранить</button>
            </div>
@@ -22,5 +23,6 @@
        </div>
    </div>
 
+    {% include 'templates/convertToXml.html'%}
     {% include 'templates/getAllJson.html'%}
 {% endblock %}
