Работает экспорт json файла

--- a/views/getJSON.twig
+++ b/views/getJSON.twig
@@ -7,6 +7,7 @@
         <textarea class="textarea" cols="76" rows="20" readonly>{{ dataJSON }}</textarea>
     </div>
     <div class="col-lg-8 d-flex justify-content-end">
+        <a href="/{{ link }}"  download>Скачать</a>
         <button class="btn" onclick="saveJSON();">Сохранить</button>
         <button class="btn" onclick="editJSON();">Редактировать</button>
     </div>
