Отображается размер файла, который был создан из textarea

--- a/views/templates/getAllJson.html
+++ b/views/templates/getAllJson.html
@@ -1,7 +1,7 @@
 <script class="AllJsonTemplate" type="text/x-handlebars-template">
     {% verbatim %}
 
-    <a href="/getJSON/{{link}}">{{link}}</a>
+    <p><a href="/getJSON/{{link}}">{{link}}</a>{{size}}</p>
 
     {% endverbatim %}
 </script>
