--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 
 body{
   background: #fff;
-  font-family: 'Open sans';
+  font-family: 'Open sans' !important;
 }
 
 .logo{
@@ -26,3 +26,64 @@ body{
 .textarea{
   margin: 50px 0 0 0;
 }
+
+.btn{
+  border: 2px solid #F38A00 !important;
+  background-color: #ff9600 !important;
+  border-radius: 3px !important;
+  color: #fff;
+  height: 40px;
+  font-size: 14px !important;
+  margin: 0 0 0 7px;
+}
+
+.btn__file{
+  background-color: #fff !important;
+  color: #ff9600;
+}
+
+.checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: 10px 0 0 20px;
+}
+.checkbox + label {
+  position: relative;
+  padding: 0 0 0 60px;
+  cursor: pointer;
+}
+.checkbox + label:before {
+  content: '';
+  position: absolute;
+  top: -4px;
+  left: 0;
+  width: 50px;
+  height: 26px;
+  border-radius: 13px;
+  background: #CDD1DA;
+  box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
+  transition: .2s;
+}
+.checkbox + label:after {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: 2px;
+  width: 22px;
+  height: 22px;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0 2px 5px rgba(0,0,0,.3);
+  transition: .2s;
+}
+.checkbox:checked + label:before {
+  background: #ff9600;
+}
+.checkbox:checked + label:after {
+  left: 26px;
+}
+.checkbox:focus + label:before {
+  box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(243, 138, 0, 0.7);
+}
+
