Работает обновление и удаление JSON

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -24,6 +24,7 @@
 
   </nav>
 
+  {% include 'templates/textareaRender.html'%}
   {% include 'templates/getAllJson.html'%}
   {% include 'templates/link.html'%}
   {% block body %}{% endblock %}
