--- a/views/templates/getAllJson.html
+++ b/views/templates/getAllJson.html
@@ -1,7 +1,7 @@
 <script class="AllJsonTemplate" type="text/x-handlebars-template">
     {% verbatim %}
 
-    <p><a href="/getJSON/{{link}}">{{link}}</a>{{size}}</p>
+    <p><a href="/getJSON/{{link}}">{{fileName}}</a>{{size}}</p>
 
     {% endverbatim %}
 </script>
