--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,7 @@ body{
   background-color: #fff;
   padding: 0 0 0 10px;
   border-bottom: 2px solid #f5f5f5;
+  margin: 0 0 50px 0;
 }
 
 .nav-link{
@@ -24,7 +25,7 @@ body{
 }
 
 .textarea{
-  margin: 50px 0 0 0;
+  margin: 0 0 0 7px;
 }
 
 .btn{
@@ -40,6 +41,11 @@ body{
 .btn__file{
   background-color: #fff !important;
   color: #ff9600;
+}
+
+.fileName__input{
+  margin: 0 0 0 7px;
+  width: 300px;
 }
 
 .checkbox {
