--- a/views/getJSON.twig
+++ b/views/getJSON.twig
@@ -5,9 +5,15 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-2"></div>
-        <div class="col-lg-8 d-flex justify-content-end">
-            <textarea class="textarea" cols="78" rows="15" readonly>{{ dataJSON }}</textarea>
+        <div class="col-lg-8 d-flex justify-content-end textareaEntry">
+            <div>
+                <span class="errorMessage"></span>
+                <input type="text" placeholder="Название файла" class="fileName__input" value="{{ fileName }}"> {{ size }} kB
+                <button class="btn" onclick="deleteJSON('{{ link }}');"><i class="fas fa-trash-alt"></i> Удалить</button>
+                <textarea class="textarea" cols="78" rows="15" readonly>{{ dataJSON }}</textarea>
+            </div>
         </div>
+        <div class="col-lg-2 AllJsonEntry"></div>
     </div>
     <div class="row">
         <div class="col-lg-2"></div>
@@ -16,12 +22,13 @@
                 <a href="/{{ link }}" download><button class="btn" ><i class="fas fa-cloud-download-alt"></i> Скачать</button></a>
             </div>
             <div class="d-flex justify-content-end">
-                <button class="btn" onclick="saveJSON();"><i class="fas fa-save"></i> Сохранить</button>
+                <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
+                <button class="btn" onclick="updateJSON('{{ link }}');"><i class="fas fa-save"></i> Сохранить</button>
                 <button class="btn" onclick="editJSON();"><i class="fas fa-edit"></i> Редактировать</button>
             </div>
         </div>
-        <div class="linkEntry"></div>
     </div>
+    <div class="linkEntry"></div>
 </div>
 
 {% endblock %}
