--- a/views/index.twig
+++ b/views/index.twig
@@ -2,12 +2,16 @@
 
 {% block body %}
 
-   <div class="container entryJSON">
+   <div class="container">
        <div class="row">
            <div class="col-lg-2"></div>
-         <div class="col-lg-8 d-flex justify-content-end textareaEntry">
-           <textarea class="textarea" cols="78" rows="15"></textarea>
-         </div>
+           <div class="col-lg-8 d-flex justify-content-end textareaEntry">
+               <div>
+                   <span class="errorMessage"></span>
+                   <input type="text" placeholder="Название файла" class="fileName__input">
+                   <textarea class="textarea" cols="78" rows="15"></textarea>
+               </div>
+           </div>
            <div class="col-lg-2 AllJsonEntry"></div>
        </div>
 
@@ -15,15 +19,15 @@
            <div class="col-lg-2"></div>
            <div class="col-lg-8 d-flex justify-content-between">
                <div class="d-flex justify-content-start">
-                   <label class="btn btn__file">Выберите файл...
-                    <input type="file" class="inputFile" hidden>
+                   <label class="btn btn__file"><span class="fileName__label">Выберите файл...</span>
+                    <input type="file" class="inputFile"  accept=".json" hidden>
                    </label>
                    <button class="btn" onclick="uploadFile();"><i class="fas fa-cloud-upload-alt"></i> Загрузить</button>
                </div>
                
                <div class="d-flex justify-content-end">
                    <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
-                   <button class="btn" onclick="saveJSON();"><i class="fas fa-save"></i> Сохранить</button>
+                   <button class="btn" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
                </div>
            </div>
        </div>
@@ -39,6 +43,4 @@
        </div>
    </div>
 
-    {% include 'templates/textareaRender.html'%}
-    {% include 'templates/getAllJson.html'%}
 {% endblock %}
