--- a/views/templates/textareaRender.html
+++ b/views/templates/textareaRender.html
@@ -1,7 +1,9 @@
 <script class="textareaTemplate" type="text/x-handlebars-template">
     {% verbatim %}
-    <p>{{sizeStr}}</p>
-    <textarea class="textarea" cols="76" rows="20">{{data}}</textarea>
-
+    <div>
+        <span class="errorMessage"></span>
+        <input type="text" placeholder="Название файла" class="fileName__input" value="{{nameFile}}"> {{sizeStr}}
+        <textarea class="textarea" cols="78" rows="15">{{data}}</textarea>
+    </div>
     {% endverbatim %}
 </script>
