--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,18 +48,18 @@ body{
   width: 300px;
 }
 
-.checkbox {
+.privateCheck, .deleteCheck {
   position: absolute;
   z-index: -1;
   opacity: 0;
   margin: 10px 0 0 20px;
 }
-.checkbox + label {
+.privateCheck + label, .deleteCheck + label {
   position: relative;
   padding: 0 0 0 60px;
   cursor: pointer;
 }
-.checkbox + label:before {
+.privateCheck + label:before, .deleteCheck + label:before {
   content: '';
   position: absolute;
   top: -4px;
@@ -71,7 +71,7 @@ body{
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
   transition: .2s;
 }
-.checkbox + label:after {
+.privateCheck + label:after, .deleteCheck + label:after {
   content: '';
   position: absolute;
   top: -2px;
@@ -83,13 +83,13 @@ body{
   box-shadow: 0 2px 5px rgba(0,0,0,.3);
   transition: .2s;
 }
-.checkbox:checked + label:before {
+.privateCheck:checked + label:before, .deleteCheck:checked + label:before {
   background: #ff9600;
 }
-.checkbox:checked + label:after {
+.privateCheck:checked + label:after, .deleteCheck:checked + label:after {
   left: 26px;
 }
-.checkbox:focus + label:before {
+.privateCheck:focus + label:before, .deleteCheck:focus + label:before {
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(243, 138, 0, 0.7);
 }
 
