--- a/views/templates/getAllJson.html
+++ b/views/templates/getAllJson.html
@@ -1,9 +1,9 @@
 <script class="AllJsonTemplate" type="text/x-handlebars-template">
     {% verbatim %}
         {{#if_eq token ""}}
-        <p><a href = "/getJSON/{{link}}";>{{fileName}}</a>{{size}}</p>
+        <p><a href = "/getJSON/{{link}}"; class="text text__link">{{fileName}}</a>{{size}}</p>
         {{else}}
-        <p><a href = "/getJSON/{{link}}/{{token}}";>{{fileName}}</a>{{size}}</p>
+        <p><a href = "/getJSON/{{link}}/{{token}}"; class="text text__link">{{fileName}}</a>{{size}}</p>
         {{/if_eq}}
     {% endverbatim %}
 </script>
