--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-body{
-  background: #fff;
-  font-family: 'Open sans' !important;
+.text{
+  font: 14px 'Open sans';
+}
+
+.text__link{
+  color: #534ED9;
+}
+
+.text__checkbox{
+
+}
+
+label{
+  margin: 0 0 11px 0 !important;
 }
 
 .logo{
@@ -56,7 +67,7 @@ body{
 }
 .privateCheck + label, .deleteCheck + label {
   position: relative;
-  padding: 0 0 0 60px;
+  padding: 0 0 0 50px;
   cursor: pointer;
 }
 .privateCheck + label:before, .deleteCheck + label:before {
@@ -64,8 +75,8 @@ body{
   position: absolute;
   top: -4px;
   left: 0;
-  width: 50px;
-  height: 26px;
+  width: 40px;
+  height: 21px;
   border-radius: 13px;
   background: #CDD1DA;
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
@@ -76,8 +87,8 @@ body{
   position: absolute;
   top: -2px;
   left: 2px;
-  width: 22px;
-  height: 22px;
+  width: 16px;
+  height: 16px;
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0 2px 5px rgba(0,0,0,.3);
@@ -87,9 +98,14 @@ body{
   background: #ff9600;
 }
 .privateCheck:checked + label:after, .deleteCheck:checked + label:after {
-  left: 26px;
+  left: 21px;
 }
 .privateCheck:focus + label:before, .deleteCheck:focus + label:before {
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(243, 138, 0, 0.7);
+}
+
+.errorMessage{
+  font: 14px 'Open sans';
+  color: #FF0000;
 }
 
