--- a/views/index.twig
+++ b/views/index.twig
@@ -5,49 +5,43 @@
    <div class="container">
        <div class="row">
            <div class="col-lg-3">
-               <input class="deleteCheck" type="checkbox" id="deleteCheck">
-               <label for="deleteCheck">Удалить после открытия</label>
-               <input class="privateCheck" type="checkbox" id="privateCheck">
-               <label for="privateCheck">Приватная ссылка</label>
-           </div>
-           <div class="col-lg-7 textareaEntry">
                <div>
-                   <span class="errorMessage"></span>
-                   <input type="text" placeholder="Название файла" class="fileName__input">
-                   <textarea class="textarea" cols="60" rows="15"></textarea>
+                   <input class="deleteCheck" type="checkbox" id="deleteCheck">
+                   <label for="deleteCheck"></label><span class="text text__checkbox">Удалить после открытия</span>
                </div>
+               <div>
+                   <input class="privateCheck" type="checkbox" id="privateCheck">
+                   <label for="privateCheck"></label><span class="text text__checkbox">Приватная ссылка</span>
+               </div>
+           </div>
+           <div class="col-lg-7">
+               <div class="textareaEntry">
+                   <input type="text" placeholder="Название файла" class="fileName__input text">
+                   <span class="errorMessage"></span>
+                   <textarea class="textarea text" cols="76" rows="20"></textarea>
+               </div>
+               <div class="d-flex justify-content-between">
+                   <div class="d-flex justify-content-start">
+                       <label class="btn btn__file"><span class="fileName__label text">Выберите файл...</span>
+                           <input type="file" class="inputFile"  accept=".json" hidden>
+                       </label>
+                       <button class="btn" onclick="uploadFile();"><i class="fas fa-cloud-upload-alt"></i>Загрузить</button>
+                   </div>
 
+                   <div class="d-flex justify-content-end">
+                       <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
+                       <button class="btn" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
+                   </div>
+               </div>
            </div>
            <div class="col-lg-2 AllJsonEntry"></div>
        </div>
 
+
        <div class="row">
            <div class="col-lg-2"></div>
-           <div class="col-lg-8 d-flex justify-content-between">
-               <div class="d-flex justify-content-start">
-                   <label class="btn btn__file"><span class="fileName__label">Выберите файл...</span>
-                    <input type="file" class="inputFile"  accept=".json" hidden>
-                   </label>
-                   <button class="btn" onclick="uploadFile();"><i class="fas fa-cloud-upload-alt"></i> Загрузить</button>
-               </div>
-               
-               <div class="d-flex justify-content-end">
-                   <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
-                   <button class="btn" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
-               </div>
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-lg-5"></div>
-           <div class="col-lg-3">
-
-           </div>
-           <div class="col-lg-3">
-
-           </div>
-       </div>
-       <div class="row">
-           <div class="col-lg-12 linkEntry"></div>
+           <div class="col-lg-8 linkEntry"></div>
+           <div class="col-lg-2"></div>
        </div>
    </div>
 
