--- a/views/privateLinkError.twig
+++ b/views/privateLinkError.twig
@@ -1,6 +1,13 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-    <h1 class="title">Не для тебя сохранен этот файл</h1>
-    <img src="../../images/notforyou.gif" width="720px" height="404px" alt="">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-7">
+                <h1 class="title">Не для тебя сохранен этот файл</h1>
+                <img src="../../images/notforyou.gif" width="720px" height="404px" alt="Не для тебя гиф">
+            </div>
+        </div>
+    </div>
 {% endblock %}
