--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
   font: 14px 'Open sans';
 }
 
-label{
+.label__checkbox{
   margin: 0 0 11px 0 !important;
 }
 
@@ -21,12 +21,6 @@ label{
   margin: 0 0 100px 0;
 }
 
-.nav-link{
-  font: 18px 'Open Sans' !important;
-  color: #434a54 !important;
-  opacity: 1 !important;
-}
-
 .btn{
   border: 2px solid #F38A00 !important;
   background-color: #ff9600 !important;
@@ -34,7 +28,6 @@ label{
   color: #fff;
   height: 40px;
   font-size: 14px !important;
-  margin: 0 0 0 7px;
 }
 
 .btn__file{
@@ -52,12 +45,12 @@ label{
   opacity: 0;
   margin: 10px 0 0 20px;
 }
-.privateCheck + label, .deleteCheck + label {
+.privateCheck + .label__checkbox, .deleteCheck + .label__checkbox {
   position: relative;
   padding: 0 0 0 50px;
   cursor: pointer;
 }
-.privateCheck + label:before, .deleteCheck + label:before {
+.privateCheck + .label__checkbox:before, .deleteCheck + .label__checkbox:before {
   content: '';
   position: absolute;
   top: -4px;
@@ -69,7 +62,7 @@ label{
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2);
   transition: .2s;
 }
-.privateCheck + label:after, .deleteCheck + label:after {
+.privateCheck + .label__checkbox:after, .deleteCheck + .label__checkbox:after {
   content: '';
   position: absolute;
   top: -2px;
@@ -81,17 +74,17 @@ label{
   box-shadow: 0 2px 5px rgba(0,0,0,.3);
   transition: .2s;
 }
-.privateCheck:checked + label:before, .deleteCheck:checked + label:before {
+.privateCheck:checked + .label__checkbox:before, .deleteCheck:checked + .label__checkbox:before {
   background: #ff9600;
 }
-.privateCheck:checked + label:after, .deleteCheck:checked + label:after {
+.privateCheck:checked + .label__checkbox:after, .deleteCheck:checked + .label__checkbox:after {
   left: 21px;
 }
-.privateCheck:focus + label:before, .deleteCheck:focus + label:before {
+.privateCheck:focus + .label__checkbox:before, .deleteCheck:focus + .label__checkbox:before {
   box-shadow: inset 0 2px 3px rgba(0,0,0,.2), 0 0 0 3px rgba(243, 138, 0, 0.7);
 }
 
-.errorMessage{
+.errorMessage, .error{
   font: 14px 'Open sans';
   color: #FF0000;
 }
@@ -101,3 +94,12 @@ label{
   text-align: center;
 }
 
+.btn__delete{
+  position: absolute;
+  right: 14px;
+  top: -22px;
+}
+
+.btn_margin{
+  margin: 0 0 0 7px;
+}
