--- a/views/error.twig
+++ b/views/error.twig
@@ -1,5 +1,12 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-<h1>{{ message }}</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="title">Упс, произошла ошибка</h1>
+            <p class="text" align="center">{{ message }}</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
