--- a/views/getJSON.twig
+++ b/views/getJSON.twig
@@ -12,27 +12,45 @@
         <div class="col-lg-3">
             <div>
                 <input class="deleteCheck" type="checkbox" id="deleteCheck">
-                <label for="deleteCheck"></label><span class="text text__checkbox">Удалить после открытия</span>
+                <label class="label__checkbox" for="deleteCheck"></label><span class="text text__checkbox">
+                    Удалить после открытия</span>
             </div>
+            {% if tokenCheck == 'true' %}
+            <div>
+                <input class="privateCheck" type="checkbox" id="privateCheck" checked>
+                <label class="label__checkbox" for="privateCheck"></label><span class="text text__checkbox">
+                    Приватная ссылка</span>
+            </div>
+            {% else %}
+            <div>
+                <input class="privateCheck" type="checkbox" id="privateCheck">
+                <label class="label__checkbox" for="privateCheck"></label><span class="text text__checkbox">
+                    Приватная ссылка</span>
+            </div>
+            {% endif %}
         </div>
         <div class="col-lg-7">
             <div class="textareaEntry">
-                <input type="text" placeholder="Название файла" class="fileName__input text" value="{{ fileName }}">
-                <span class="text">{{ size }} kB</span>
-                <span class="errorMessage"></span>
-                <button class="btn" onclick="deleteJSON('{{ link }}');"><i class="fas fa-trash-alt"></i> Удалить</button>
+                <form class="fileName__form">
+                    <input type="text" placeholder="Название файла" class="fileName__input text" name="fileName__input"
+                           value="{{ fileName }}">
+                    <span class="text">{{ size }} kB</span>
+                    <span class="errorMessage"></span>
+                    <button class="btn btn__delete" onclick="deleteJSON('{{ link }}');"><i class="fas fa-trash-alt"></i> Удалить</button>
+                </form>
                 <textarea class="textarea text" cols="77" rows="20" readonly>{{ dataJSON }}</textarea>
             </div>
 
             <div class="d-flex justify-content-between">
                 <div class="d-flex justify-content-start">
-                    <a href="/{{ link }}" download><button class="btn" ><i class="fas fa-cloud-download-alt"></i> Скачать</button></a>
+                    <a href="/{{ link }}" download><button class="btn" ><i class="fas fa-cloud-download-alt"></i>
+                            Скачать</button></a>
                 </div>
 
                 <div class="d-flex justify-content-end">
                     <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
-                    <button class="btn" onclick="updateJSON('{{ link }}');"><i class="fas fa-save"></i> Сохранить</button>
-                    <button class="btn" onclick="editJSON();"><i class="fas fa-edit"></i> Редактировать</button>
+                    <button class="btn btn_margin" onclick="updateJSON('{{ link }}');"><i class="fas fa-save"></i> Сохранить</button>
+                    <button class="btn btn_margin" onclick="editJSON();"><i class="fas fa-edit"></i> Редактировать</button>
                 </div>
             </div>
         </div>
