--- a/views/index.twig
+++ b/views/index.twig
@@ -2,6 +2,7 @@
 
 {% block js %}
     <script src="/javascripts/saveJSON.js"></script>
+    <script src="/javascripts/uploadFile.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -11,17 +12,19 @@
        <div class="col-lg-3">
            <div>
                <input class="deleteCheck" type="checkbox" id="deleteCheck">
-               <label for="deleteCheck"></label><span class="text text__checkbox">Удалить после открытия</span>
+               <label class="label__checkbox" for="deleteCheck"></label><span class="text text__checkbox">Удалить после открытия</span>
            </div>
            <div>
                <input class="privateCheck" type="checkbox" id="privateCheck">
-               <label for="privateCheck"></label><span class="text text__checkbox">Приватная ссылка</span>
+               <label class="label__checkbox" for="privateCheck"></label><span class="text text__checkbox">Приватная ссылка</span>
            </div>
        </div>
        <div class="col-lg-7">
            <div class="textareaEntry">
-               <input type="text" placeholder="Название файла" class="fileName__input text">
-               <span class="errorMessage"></span>
+               <form class="fileName__form">
+                    <input type="text" placeholder="Название файла" class="fileName__input text" name="fileName__input">
+                   <span class="errorMessage"></span>
+               </form>
                <textarea class="textarea text" cols="77" rows="20"></textarea>
            </div>
            <div class="d-flex justify-content-between">
@@ -29,12 +32,12 @@
                    <label class="btn btn__file"><span class="fileName__label text">Выберите файл...</span>
                        <input type="file" class="inputFile"  accept=".json" hidden>
                    </label>
-                   <button class="btn" onclick="uploadFile();"><i class="fas fa-cloud-upload-alt"></i>Загрузить</button>
+                   <button class="btn btn_margin" onclick="uploadFile();"><i class="fas fa-cloud-upload-alt"></i>Загрузить</button>
                </div>
 
                <div class="d-flex justify-content-end">
                    <button class="btn" onclick="convertToXml();"><i class="fas fa-code"></i> xml</button>
-                   <button class="btn" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
+                   <button class="btn btn_margin" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
                </div>
            </div>
        </div>
