исправил настройки сервера(увеличил ограничение по размеру загружаемого файла)

--- a/views/index.twig
+++ b/views/index.twig
@@ -40,15 +40,12 @@
                    <button class="btn btn_margin" onclick="saveJSON('');"><i class="fas fa-save"></i> Сохранить</button>
                </div>
            </div>
+           <div class="linkEntry"></div>
        </div>
-       <div class="col-lg-2 AllJsonEntry"></div>
-   </div>
-
-
-   <div class="row">
-       <div class="col-lg-3"></div>
-       <div class="col-lg-9 linkEntry"></div>
-
+       <div class="col-lg-2 ">
+           <p class="text">Загруженные файлы:</p>
+           <div class="AllJsonEntry"></div>
+       </div>
    </div>
 </div>
 
