--- a/views/getJSON.twig
+++ b/views/getJSON.twig
@@ -53,15 +53,12 @@
                     <button class="btn btn_margin" onclick="editJSON();"><i class="fas fa-edit"></i> Редактировать</button>
                 </div>
             </div>
+            <div class="linkEntry"></div>
         </div>
-        <div class="col-lg-2 AllJsonEntry"></div>
-    </div>
-
-
-    <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-9 linkEntry"></div>
-
+        <div class="col-lg-2 ">
+            <p class="text">Загруженные файлы:</p>
+            <div class="AllJsonEntry"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
